changed background and fixed date push and pull on cv

--- a/cv.html
+++ b/cv.html
@@ -54,29 +54,29 @@
       <div class="panel-body">
     	<div class="container" id="content">
         	<div class="row">
-            	<div class="col-md-5 col-sm-5">
+            	<div class="col-md-4 col-md-push-8">
+                	<h3>December 2013</h3>
+            	</div>
+            	<div class="col-md-5 col-md-pull-4">
                 	<h3>Pratt Institute 
                 	</br><a href="https://www.pratt.edu/academics/information/" target="_blank">School of Information and Library Science</a>
                 	</h3>
                 	<p>Master of Sciences in Library and Information Science, with Distinction</p>
             	</div>
-            	<div class="col-md-3 col-sm-3"></div>
-            	<div class="col-md-4 col-sm-4">
-                	<h3>December 2013</h3>
-            	</div>
+            	<div class="col-md-3"></div>
         	</div>
         	<div class="row">
-            	<div class="col-md-5 col-sm-5">
+            	<div class="col-md-4 col-md-push-8">
+                	<h3>May 2010</h3>
+            	</div>
+            	<div class="col-md-5 col-md-pull-4">
                 	<h3>Boston College 
                 	</br><a href="http://www.bc.edu/schools/cas.html" target="_blank">College of Arts and Sciences</a>
                 	</h3>
                 	<p>Bachelor of Arts in Music</p>
                 	<p>Bachelor of Arts in English</p>
             	</div>
-            	<div class="col-md-3 col-sm-3"></div>
-            	<div class="col-md-4 col-sm-4">
-                	<h3>May 2010</h3>
-            	</div>
+            	<div class="col-md-3"></div>
         	</div>
     	</div>      
       </div>
@@ -94,7 +94,10 @@
       <div class="panel-body">
     	<div class="container" id="content">
 			<div class="row">
-            	<div class="col-md-5 col-sm-5">
+            	<div class="col-md-4 col-md-push-8">
+                	<h3>Oct. 2014 - Present</h3>
+            	</div>
+            	<div class="col-md-5 col-md-pull-4">
                 	<h3>Emerging Technologies Librarian 
                 	</br><a href="http://libraries.ou.edu" target="_blank">University of Oklahoma Libraries</a>
                 	</h3>
@@ -104,13 +107,13 @@
 						<li>Manage a diverse student staff providing direct public service to university students, staff, and faculty</li>
 					</ul>
             	</div>
-            	<div class="col-md-3 col-sm-3"></div>
-            	<div class="col-md-4 col-sm-4">
-                	<h3>Oct. 2014 - Present</h3>
-            	</div>
+            	<div class="col-md-3"></div>
         	</div>
 			<div class="row">
-            	<div class="col-md-5 col-sm-5">
+            	<div class="col-md-4 col-md-push-8">
+                	<h3>July 2014 - Sept. 2014</h3>
+            	</div>
+            	<div class="col-md-5 col-md-pull-4">
                 	<h3>Circulation Assistant 
                 	</br><a href="http://www.orangecountync.gov/departments/library/index.php" target="_blank">Orange County Public Library</a>
                 	</h3>
@@ -119,13 +122,14 @@
 						<li>Participate in all aspects of circulation processes, including checkout, book return, donations, and shelving</li>
 					</ul>
             	</div>
-            	<div class="col-md-3 col-sm-3"></div>
-            	<div class="col-md-4 col-sm-4">
-                	<h3>July 2014 - Sept. 2014</h3>
-            	</div>
+            	<div class="col-md-3"></div>
+
         	</div>
 			<div class="row">
-            	<div class="col-md-5 col-sm-5">
+            	<div class="col-md-4 col-md-push-8">
+                	<h3>May 2013 - Dec. 2013</h3>
+            	</div>
+            	<div class="col-md-5 col-md-pull-4">
                 	<h3>Archives and Special Collections Assistant 
                 	</br><a href="http://library.pratt.edu" target="_blank">Pratt Institute Library</a>
                 	</h3>
@@ -134,13 +138,13 @@
 						<li>Evaluated Pratt Institute archival materials from the late nineteenth century to present</li>
 					</ul>
             	</div>
-            	<div class="col-md-3 col-sm-3"></div>
-            	<div class="col-md-4 col-sm-4">
-                	<h3>May 2013 - Dec. 2013</h3>
-            	</div>
+            	<div class="col-md-3"></div>
         	</div>
 			<div class="row">
-            	<div class="col-md-5 col-sm-5">
+            	<div class="col-md-4 col-md-push-8">
+                	<h3>Sept. 2012 - Dec. 2013</h3>
+            	</div>
+            	<div class="col-md-5 col-md-pull-4">
                 	<h3>Technology Tutor 
                 	</br><a href="https://www.pratt.edu/academics/information/" target="_blank">Pratt Institute School of Information and Library Science</a>
                 	</h3>
@@ -149,13 +153,13 @@
                 		<li>Quickly learned and adopted new technologies to improve instruction</li>
 					</ul>
             	</div>
-            	<div class="col-md-3 col-sm-3"></div>
-            	<div class="col-md-4 col-sm-4">
-                	<h3>Sept. 2012 - Dec. 2013</h3>
-            	</div>
+            	<div class="col-md-3"></div>
         	</div>
 			<div class="row">
-            	<div class="col-md-5 col-sm-5">
+            	<div class="col-md-4 col-md-push-8">
+                	<h3>Feb. 2013 - May 2013</h3>
+            	</div>
+            	<div class="col-md-5 col-md-pull-4">
                 	<h3>Program Database Intern 
                 	</br><a href="http://www.juilliard.edu/campus-life/library-archives" target="_blank">The Juilliard School, Lila Acheson Wallace Library</a>
                 	</h3>
@@ -163,13 +167,13 @@
                 		<li>Created database entries for performance program data as the first stage of digitization efforts</li>
 					</ul>
             	</div>
-            	<div class="col-md-3 col-sm-3"></div>
-            	<div class="col-md-4 col-sm-4">
-                	<h3>Feb. 2013 - May 2013</h3>
-            	</div>
+            	<div class="col-md-3"></div>
         	</div>
 			<div class="row">
-            	<div class="col-md-5 col-sm-5">
+            	<div class="col-md-4 col-md-push-8">
+                	<h3>Dec. 2011 - Aug. 2013</h3>
+            	</div>
+            	<div class="col-md-5 col-md-pull-4">
                 	<h3>Resource Development Coordinator 
                 	</br><a href="http://bgca.org/Pages/index.aspx" target="_blank">Boys & Girls Clubs of America</a>
                 	</h3>
@@ -178,10 +182,7 @@
                 		<li>Maintained a database of individual and corporate donor information</li>
 					</ul>
             	</div>
-            	<div class="col-md-3 col-sm-3"></div>
-            	<div class="col-md-4 col-sm-4">
-                	<h3>Dec. 2011 - Aug. 2013</h3>
-            	</div>
+            	<div class="col-md-3"></div>
         	</div>
     	</div>
       </div>
@@ -199,7 +200,10 @@
       <div class="panel-body">
     	<div class="container" id="content">
  			<div class="row">
-            	<div class="col-md-5 col-sm-5">
+            	<div class="col-md-4 col-md-push-8">
+                	<h3>2012 - Present</h3>
+            	</div>
+            	<div class="col-md-5 col-md-pull-4">
                 	<h3><a href="http://ala.org" target="_blank">American Library Association</a></h3>
                 	<ul>
                 		<li>Association of College and Research Libraries</li>
@@ -214,25 +218,25 @@
 						<li>New Members Roundtable</li>
 					</ul>
             	</div>
-            	<div class="col-md-3 col-sm-3"></div>
-            	<div class="col-md-4 col-sm-4">
-                	<h3>2012 - Present</h3>
-            	</div>
+            	<div class="col-md-3"></div>
             </div>
  			<div class="row">
-            	<div class="col-md-5 col-sm-5">
+            	<div class="col-md-4 col-md-push-8">
+                	<h3>Sept. 2015 - Present
+                	</br>April 2014 - Sept. 2015</h3>
+            	</div>
+            	<div class="col-md-5 col-md-pull-4">
                 	<h3>Content Managing Editor
                 	</br>Associate Editor: Formatting
                 	</br><a href="http://inalj.com" target="_blank">INALJ.com</a></h3>
             	</div>
-            	<div class="col-md-3 col-sm-3"></div>
-            	<div class="col-md-4 col-sm-4">
-                	<h3>Sept. 2015 - Present
-                	</br>April 2014 - Sept. 2015</h3>
-            	</div>
+            	<div class="col-md-3"></div>
             </div>
  			<div class="row">
-            	<div class="col-md-5 col-sm-5">
+            	<div class="col-md-4 col-md-push-8">
+                	<h3>May 2012 - Dec. 2013</h3>
+            	</div>
+            	<div class="col-md-5 col-md-pull-4">
                 	<h3>President
                 	</br><a href="http://silssa.prattsils.org/" target="_blank">Pratt SILS Student Association</a>
                 	</h3>
@@ -241,10 +245,7 @@
 						<li>Partnered with groups inside and outside of the school to plan meetings and events to encourage student networking and development</li>
 					</ul>
             	</div>
-            	<div class="col-md-3 col-sm-3"></div>
-            	<div class="col-md-4 col-sm-4">
-                	<h3>May 2012 - Dec. 2013</h3>
-            	</div>
+            	<div class="col-md-3"></div>
         	</div>        	
     	</div>
       </div>
