--- a/cv.html
+++ b/cv.html
@@ -54,29 +54,23 @@
       <div class="panel-body">
     	<div class="container" id="content">
         	<div class="row">
-            	<div class="col-md-4 col-md-push-8">
-                	<h3>December 2013</h3>
-            	</div>
-            	<div class="col-md-5 col-md-pull-4">
+            	<div class="col-md-7">
                 	<h3>Pratt Institute 
                 	</br><a href="https://www.pratt.edu/academics/information/" target="_blank">School of Information and Library Science</a>
+                	</br>December 2013
                 	</h3>
                 	<p>Master of Sciences in Library and Information Science, with Distinction</p>
             	</div>
-            	<div class="col-md-3"></div>
         	</div>
         	<div class="row">
-            	<div class="col-md-4 col-md-push-8">
-                	<h3>May 2010</h3>
-            	</div>
-            	<div class="col-md-5 col-md-pull-4">
+            	<div class="col-md-7">
                 	<h3>Boston College 
                 	</br><a href="http://www.bc.edu/schools/cas.html" target="_blank">College of Arts and Sciences</a>
+                	</br>May 2010
                 	</h3>
                 	<p>Bachelor of Arts in Music</p>
                 	<p>Bachelor of Arts in English</p>
             	</div>
-            	<div class="col-md-3"></div>
         	</div>
     	</div>      
       </div>
@@ -94,12 +88,10 @@
       <div class="panel-body">
     	<div class="container" id="content">
 			<div class="row">
-            	<div class="col-md-4 col-md-push-8">
-                	<h3>Oct. 2014 - Present</h3>
-            	</div>
-            	<div class="col-md-5 col-md-pull-4">
+            	<div class="col-md-7">
                 	<h3>Emerging Technologies Librarian 
                 	</br><a href="http://libraries.ou.edu" target="_blank">University of Oklahoma Libraries</a>
+                	</br>Oct. 2014 - Present
                 	</h3>
                 	<ul>
                 		<li>Investigate new and innovative tools and technologies to aid and improve research and instruction</li>
@@ -107,82 +99,65 @@
 						<li>Manage a diverse student staff providing direct public service to university students, staff, and faculty</li>
 					</ul>
             	</div>
-            	<div class="col-md-3"></div>
         	</div>
 			<div class="row">
-            	<div class="col-md-4 col-md-push-8">
-                	<h3>July 2014 - Sept. 2014</h3>
-            	</div>
-            	<div class="col-md-5 col-md-pull-4">
+            	<div class="col-md-7">
                 	<h3>Circulation Assistant 
                 	</br><a href="http://www.orangecountync.gov/departments/library/index.php" target="_blank">Orange County Public Library</a>
+                	</br>July 2014 - Sept. 2014
                 	</h3>
                 	<ul>
                 		<li>Provide face-to-face point of contact for library patrons</li>
 						<li>Participate in all aspects of circulation processes, including checkout, book return, donations, and shelving</li>
 					</ul>
             	</div>
-            	<div class="col-md-3"></div>
-
         	</div>
 			<div class="row">
-            	<div class="col-md-4 col-md-push-8">
-                	<h3>May 2013 - Dec. 2013</h3>
-            	</div>
-            	<div class="col-md-5 col-md-pull-4">
+            	<div class="col-md-7">
                 	<h3>Archives and Special Collections Assistant 
                 	</br><a href="http://library.pratt.edu" target="_blank">Pratt Institute Library</a>
+                	</br>May 2013 - Dec. 2013
                 	</h3>
                 	<ul>
                 		<li>Answered research queries using archival materials, including a variety of printed materials, photographs, ephemera, and realia</li>
 						<li>Evaluated Pratt Institute archival materials from the late nineteenth century to present</li>
 					</ul>
             	</div>
-            	<div class="col-md-3"></div>
         	</div>
 			<div class="row">
-            	<div class="col-md-4 col-md-push-8">
-                	<h3>Sept. 2012 - Dec. 2013</h3>
-            	</div>
-            	<div class="col-md-5 col-md-pull-4">
+            	<div class="col-md-7">
                 	<h3>Technology Tutor 
                 	</br><a href="https://www.pratt.edu/academics/information/" target="_blank">Pratt Institute School of Information and Library Science</a>
+                	</br>Sept. 2012 - Dec. 2013
                 	</h3>
                 	<ul>
                 		<li>Instructed Pratt graduate students, faculty, and staff one-on-one about information technology and other information literacy issues</li>
                 		<li>Quickly learned and adopted new technologies to improve instruction</li>
 					</ul>
             	</div>
-            	<div class="col-md-3"></div>
         	</div>
 			<div class="row">
-            	<div class="col-md-4 col-md-push-8">
-                	<h3>Feb. 2013 - May 2013</h3>
-            	</div>
-            	<div class="col-md-5 col-md-pull-4">
+            	<div class="col-md-7">
                 	<h3>Program Database Intern 
                 	</br><a href="http://www.juilliard.edu/campus-life/library-archives" target="_blank">The Juilliard School, Lila Acheson Wallace Library</a>
+                	</br>Feb. 2013 - May 2013
                 	</h3>
                 	<ul>
                 		<li>Created database entries for performance program data as the first stage of digitization efforts</li>
 					</ul>
             	</div>
-            	<div class="col-md-3"></div>
         	</div>
 			<div class="row">
-            	<div class="col-md-4 col-md-push-8">
-                	<h3>Dec. 2011 - Aug. 2013</h3>
-            	</div>
-            	<div class="col-md-5 col-md-pull-4">
+            	<div class="col-md-7">
                 	<h3>Resource Development Coordinator 
                 	</br><a href="http://bgca.org/Pages/index.aspx" target="_blank">Boys & Girls Clubs of America</a>
+                	</br>Dec. 2011 - Aug. 2013
                 	</h3>
                 	<ul>
                 		<li>Assisted in the planning and execution of major donor events</li>
                 		<li>Maintained a database of individual and corporate donor information</li>
 					</ul>
             	</div>
-            	<div class="col-md-3"></div>
         	</div>
     	</div>
       </div>
@@ -200,11 +175,9 @@
       <div class="panel-body">
     	<div class="container" id="content">
  			<div class="row">
-            	<div class="col-md-4 col-md-push-8">
-                	<h3>2012 - Present</h3>
-            	</div>
-            	<div class="col-md-5 col-md-pull-4">
-                	<h3><a href="http://ala.org" target="_blank">American Library Association</a></h3>
+            	<div class="col-md-7">
+                	<h3><a href="http://ala.org" target="_blank">American Library Association</a>
+                	</br>2012 - Present</h3>
                 	<ul>
                 		<li>Association of College and Research Libraries</li>
                 			<ul>
@@ -218,34 +191,27 @@
 						<li>New Members Roundtable</li>
 					</ul>
             	</div>
-            	<div class="col-md-3"></div>
             </div>
  			<div class="row">
-            	<div class="col-md-4 col-md-push-8">
-                	<h3>Sept. 2015 - Present
-                	</br>April 2014 - Sept. 2015</h3>
-            	</div>
-            	<div class="col-md-5 col-md-pull-4">
+            	<div class="col-md-7">
                 	<h3>Content Managing Editor
+                	</br>Sept. 2015 - Present
                 	</br>Associate Editor: Formatting
+                	</br>April 2014 - Sept. 2015
                 	</br><a href="http://inalj.com" target="_blank">INALJ.com</a></h3>
             	</div>
-            	<div class="col-md-3"></div>
             </div>
  			<div class="row">
-            	<div class="col-md-4 col-md-push-8">
-                	<h3>May 2012 - Dec. 2013</h3>
-            	</div>
-            	<div class="col-md-5 col-md-pull-4">
+            	<div class="col-md-7">
                 	<h3>President
                 	</br><a href="http://silssa.prattsils.org/" target="_blank">Pratt SILS Student Association</a>
+                	</br>May 2012 - Dec. 2013
                 	</h3>
                 	<ul>
                 		<li>Conducted outreach to students, faculty, and administration using social media, email, and in-person interactions</li>
 						<li>Partnered with groups inside and outside of the school to plan meetings and events to encourage student networking and development</li>
 					</ul>
             	</div>
-            	<div class="col-md-3"></div>
         	</div>        	
     	</div>
       </div>
