--- a/cv.html
+++ b/cv.html
@@ -54,7 +54,7 @@
       <div class="panel-body">
     	<div class="container" id="content">
         	<div class="row">
-            	<div class="col-md-7">
+            	<div class="col-sm-7">
                 	<h3>Pratt Institute 
                 	</br><a href="https://www.pratt.edu/academics/information/" target="_blank">School of Information and Library Science</a>
                 	</br>December 2013
@@ -63,7 +63,7 @@
             	</div>
         	</div>
         	<div class="row">
-            	<div class="col-md-7">
+            	<div class="col-sm-7">
                 	<h3>Boston College 
                 	</br><a href="http://www.bc.edu/schools/cas.html" target="_blank">College of Arts and Sciences</a>
                 	</br>May 2010
@@ -88,7 +88,7 @@
       <div class="panel-body">
     	<div class="container" id="content">
 			<div class="row">
-            	<div class="col-md-7">
+            	<div class="col-sm-7">
                 	<h3>Emerging Technologies Librarian 
                 	</br><a href="http://libraries.ou.edu" target="_blank">University of Oklahoma Libraries</a>
                 	</br>Oct. 2014 - Present
@@ -101,7 +101,7 @@
             	</div>
         	</div>
 			<div class="row">
-            	<div class="col-md-7">
+            	<div class="col-sm-7">
                 	<h3>Circulation Assistant 
                 	</br><a href="http://www.orangecountync.gov/departments/library/index.php" target="_blank">Orange County Public Library</a>
                 	</br>July 2014 - Sept. 2014
@@ -113,7 +113,7 @@
             	</div>
         	</div>
 			<div class="row">
-            	<div class="col-md-7">
+            	<div class="col-sm-7">
                 	<h3>Archives and Special Collections Assistant 
                 	</br><a href="http://library.pratt.edu" target="_blank">Pratt Institute Library</a>
                 	</br>May 2013 - Dec. 2013
@@ -125,7 +125,7 @@
             	</div>
         	</div>
 			<div class="row">
-            	<div class="col-md-7">
+            	<div class="col-sm-7">
                 	<h3>Technology Tutor 
                 	</br><a href="https://www.pratt.edu/academics/information/" target="_blank">Pratt Institute School of Information and Library Science</a>
                 	</br>Sept. 2012 - Dec. 2013
@@ -137,7 +137,7 @@
             	</div>
         	</div>
 			<div class="row">
-            	<div class="col-md-7">
+            	<div class="col-sm-7">
                 	<h3>Program Database Intern 
                 	</br><a href="http://www.juilliard.edu/campus-life/library-archives" target="_blank">The Juilliard School, Lila Acheson Wallace Library</a>
                 	</br>Feb. 2013 - May 2013
@@ -148,7 +148,7 @@
             	</div>
         	</div>
 			<div class="row">
-            	<div class="col-md-7">
+            	<div class="col-sm-7">
                 	<h3>Resource Development Coordinator 
                 	</br><a href="http://bgca.org/Pages/index.aspx" target="_blank">Boys & Girls Clubs of America</a>
                 	</br>Dec. 2011 - Aug. 2013
@@ -175,7 +175,7 @@
       <div class="panel-body">
     	<div class="container" id="content">
  			<div class="row">
-            	<div class="col-md-7">
+            	<div class="col-sm-7">
                 	<h3><a href="http://ala.org" target="_blank">American Library Association</a>
                 	</br>2012 - Present</h3>
                 	<ul>
@@ -193,7 +193,7 @@
             	</div>
             </div>
  			<div class="row">
-            	<div class="col-md-7">
+            	<div class="col-sm-7">
                 	<h3>Content Managing Editor
                 	</br>Sept. 2015 - Present
                 	</br>Associate Editor: Formatting
@@ -202,7 +202,7 @@
             	</div>
             </div>
  			<div class="row">
-            	<div class="col-md-7">
+            	<div class="col-sm-7">
                 	<h3>President
                 	</br><a href="http://silssa.prattsils.org/" target="_blank">Pratt SILS Student Association</a>
                 	</br>May 2012 - Dec. 2013
