--- a/404.html
+++ b/404.html
@@ -36,32 +36,11 @@
     <a href="index.html">
     <div class="jumbotron">
         <div class="container">
-            <h1 align="center">James L. Adams</h1>
-            <p align="center">Emerging Technologies Librarian at the University of Oklahoma Libraries. Here's some stuff I do.</p>
+            <h1 align="center">Oops, nothing here!</h1>
+            <p align="center">Head on Home</p>
         </div>
     </div>
     </a>
-    <div class="container content" id="content">
-        <div class="row">
-            <div class="col-md-4">
-                <h2>Emerging Technologies</h2>
-                <a href="images/vr.png" data-lightbox="vr" data-title="Interacting with Molecules in VR"><img class="img-thumbnail" src="images/vr.png"></a>
-                <p>Here at OU, we're exploring new methods of research and instruction through the use of Virtual Reality, 3D Printing, and all sorts of new technologies. Here's some of the work we've been doing.</p>
-                <p><a class="btn btn-default" href="404.html" role="button">View details &raquo;</a></p>
-            </div>
-            <div class="col-md-4" id="webdev">
-                <h2>Data Visualizations</h2>
-                <a href="images/cytoscape.png" data-lightbox="cytoscape" data-title="Visualizing a blog using Cytoscape.js"><img class="img-thumbnail" src="images/cytoscape.png"></a>
-                <p>We use data for everything, and visualizations help us understand it. Here's some visualizations I've worked on.</p>
-                <p><a class="btn btn-default" href="visualizations.html" role="button">View details &raquo;</a></p>
-            </div>
-            <div class="col-md-4">
-                <h2>Other Projects</h2>
-                <a href="images/galileo.png" data-lightbox="galileo.png" data-title="From OU History of Science Collections"><img class="img-thumbnail" id="galileo" src="images/galileo.png"></a>
-                <p><a class="btn btn-default" href="404.html" role="button">View details &raquo;</a></p>
-            </div>
-        </div>
-    </div>
     <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
   	<script src="lightbox2-master/dist/js/lightbox.min.js"></script>
 </body>
