added d3 refugee vis

--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
                 <h2>Emerging Technologies</h2>
                 <a href="images/vr.png" data-lightbox="vr" data-title="Interacting with Molecules in VR"><img class="img-thumbnail" src="images/vr.png"></a>
                 <p>Here at OU, we're exploring new methods of research and instruction through the use of Virtual Reality, 3D Printing, and all sorts of new technologies. Here's some of the work we've been doing.</p>
-                <p><a class="btn btn-default" href="404.html" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="404.html" role="button">Check it out &raquo;</a></p>
             </div>
             <div class="col-md-4" id="webdev">
                 <h2>Data Visualizations</h2>
                 <a href="images/cytoscape.png" data-lightbox="cytoscape" data-title="Visualizing a blog using Cytoscape.js"><img class="img-thumbnail" src="images/cytoscape.png"></a>
                 <p>We use data for everything, and visualizations help us understand it. Here's some visualizations I've worked on.</p>
-                <p><a class="btn btn-default" href="visualizations.html" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="visualizations.html" role="button">Check it out &raquo;</a></p>
             </div>
             <div class="col-md-4">
                 <h2>Other Projects</h2>
                 <a href="images/galileo.png" data-lightbox="galileo.png" data-title="From OU History of Science Collections"><img class="img-thumbnail" id="galileo" src="images/galileo.png"></a>
-                <p><a class="btn btn-default" href="404.html" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="404.html" role="button">Check it out &raquo;</a></p>
             </div>
         </div>
     </div>
