--- a/visualizations.html
+++ b/visualizations.html
@@ -22,7 +22,7 @@
                     </span> <span class="icon-bar">
                     </span> 
                 </button>
-                <a class="navbar-brand" href="index.html">Home</a>
+                <a class="navbar-brand" href="../visualizations.html">Visualizations</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -37,6 +37,11 @@
                             <li><a href="vis/HCLCStats.html">HCLC Usage</a></li>
                             <li><a href="vis/rounds.html">HCLC Rounds</a></li>
                             <li><a href="vis/EIC.html">EIC Stats</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">Other<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="vis/refugees.html">Refugees 2014</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -68,13 +73,13 @@
                 	<h2>Earthquakes in Oklahoma</h2>
                 	<a href="images/quakemap.png" data-lightbox="quakemap" data-title="Earthquakes in Oklahoma"><img class="img-thumbnail" src="images/quakemap.png"></a>
                 	<p>A map that displays historical earthquakes in Oklahoma and recent earthquakes worldwide.</p>
-                	<p><a class="btn btn-default" href="vis/QuakeMap.html" role="button">View details &raquo;</a></p>
+                	<p><a class="btn btn-default" href="vis/QuakeMap.html" role="button">Check it out &raquo;</a></p>
             	</div>
             	<div class="col-md-6 col-sm-6">
                 	<h2>Weather in the United States</h2>
                 	<a href="images/weathermap.png" data-lightbox="weathermap" data-title="Keeping track of current weather"><img class="img-thumbnail" src="images/weathermap.png"></a>
                 	<p>This is a map I put together using current data from NOAA's nowCOAST service. During tornado season I overlay live geocoded tweets from #okwx to track reactions to the weather.</p>
-                	<p><a class="btn btn-default" href="vis/WeatherMap.html" role="button">View details &raquo;</a></p>
+                	<p><a class="btn btn-default" href="vis/WeatherMap.html" role="button">Check it out &raquo;</a></p>
             	</div>
         	</div>
     	</div>      
@@ -97,19 +102,19 @@
                 	<h2>Tracking HCLC Rounds</h2>
                 	<a href="images/rounds.png" data-lightbox="rounds" data-title="Keeping track of ourselves every day"><img class="img-thumbnail" src="images/rounds.png"></a>
                 	<p>How good are we about tracking stats in the HCLC? These visualizations help us keep track of ourselves.</p>
-                	<p><a class="btn btn-default" href="vis/rounds.html" role="button">View details &raquo;</a></p>
+                	<p><a class="btn btn-default" href="vis/rounds.html" role="button">Check it out &raquo;</a></p>
             	</div>
             	<div class="col-md-4 col-sm-6">
                 	<h2>Tracking HCLC Usage</h2>
                 	<a href="images/occupancy.png" data-lightbox="occupancy" data-title="Making sure we know how people use our space"><img class="img-thumbnail" src="images/occupancy.png"></a>
                 	<p>How are people using the HCLC? These visualizations help us understand when and how we need to focus our efforts.</p>
-                	<p><a class="btn btn-default" href="vis/HCLCStats.html" role="button">View details &raquo;</a></p>
+                	<p><a class="btn btn-default" href="vis/HCLCStats.html" role="button">Check it out &raquo;</a></p>
             	</div>
             	<div class="col-md-4 col-sm-6">
                 	<h2>EIC Statistics</h2>
                 	<a href="images/eic.png" data-lightbox="eic" data-title="Providing service in the EIC"><img class="img-thumbnail" src="images/eic.png"></a>
                 	<p>How are people using the Electronic Information Center on the main floor?</p>
-                	<p><a class="btn btn-default" href="vis/EIC.html" role="button">View details &raquo;</a></p>
+                	<p><a class="btn btn-default" href="vis/EIC.html" role="button">Check it out &raquo;</a></p>
             	</div>
         	</div>
     	</div>
@@ -128,12 +133,18 @@
       <div class="panel-body">
     	<div class="container" id="content">
         	<div class="row">
-            	<div class="col-md-6 col-sm-6 col-centered">
+            	<div class="col-md-6 col-sm-6">
+                	<h2>Visualizing America's Refugees</h2>
+                	<a href="images/refugees.png" data-lightbox="refugees" data-title="Showing US refugee settlement using D3"><img class="img-thumbnail" src="images/refugees.png"></a>
+                	<p>This is an interactive visualization of where refugees settled in the US during FY2014 that I put together while learning D3.</p>
+                	<p><a class="btn btn-default" href="vis/refugees.html" role="button">Check it out &raquo;</a></p>
+            	</div>
+                <div class="col-md-6 col-sm-6">
                 	<h2>Inhabiting the Anthropocene</h2>
                 	<a href="images/cytoscape.png" data-lightbox="cytoscape" data-title="Visualizing a blog using Cytoscape.js"><img class="img-thumbnail" src="images/cytoscape.png"></a>
                 	<p>This is a visualization of a multidisciplinary blog that I helped create using the Cytoscape.js JavaScript library. This link will take you to an external site.</p>
-                	<p><a class="btn btn-default" href="http://ztclasses.com/HabitationAnthropocene/index.html" target="_blank" role="button">View details &raquo;</a></p>
-            	</div>
+                	<p><a class="btn btn-default" href="http://ztclasses.com/HabitationAnthropocene/index.html" target="_blank" role="button">Check it out &raquo;</a></p>
+            	</div> 
         	</div>
     	</div>
       </div>
