--- a/vis/EIC.html
+++ b/vis/EIC.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
-<body>
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -37,6 +36,11 @@
                             <li><a href="HCLCStats.html">HCLC Usage</a></li>
                             <li><a href="rounds.html">HCLC Rounds</a></li>
                             <li><a href="EIC.html">EIC Stats</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">Other<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="refugees.html">Refugees 2014</a></li>
                         </ul>
                     </li>
                 </ul>
