--- a/vis/QuakeMap.html
+++ b/vis/QuakeMap.html
@@ -85,6 +85,11 @@
                             <li><a href="EIC.html">EIC Stats</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">Other<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="refugees.html">Refugees 2014</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
